--- a/WUApiLib.Extensions.Async.UnitTest/WUApiLib.Extensions.Async.UnitTest.csproj
+++ b/WUApiLib.Extensions.Async.UnitTest/WUApiLib.Extensions.Async.UnitTest.csproj
@@ -2,11 +2,13 @@
   <PropertyGroup>
     <ProjectGuid>{ACA39C22-E202-4518-ACF6-764B70392E8E}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFramework>net46</TargetFramework>
+    <TargetFrameworks>net48;netcoreapp3.0</TargetFrameworks>
+    <NoWarn>3305</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
+    <PackageReference Include="System.Security.Principal.Windows" Version="4.7.0" />
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="WUApiLib">
