--- a/WUApiLib.Extensions/WUApiLib.Extensions.csproj
+++ b/WUApiLib.Extensions/WUApiLib.Extensions.csproj
@@ -2,7 +2,8 @@
   <PropertyGroup>
     <ProjectGuid>{ACFF0048-C65C-49E8-8799-129AD80BBEF2}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFramework>net46</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <NoWarn>3305</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
     <Version>1.0.0.0</Version>
