--- a/WUApiLib.Extensions.Async.UnitTest/WUApiLib.Extensions.Async.UnitTest.csproj
+++ b/WUApiLib.Extensions.Async.UnitTest/WUApiLib.Extensions.Async.UnitTest.csproj
@@ -6,6 +6,7 @@
     <NoWarn>3305</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="System.Collections.Immutable" Version="1.7.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
     <PackageReference Include="System.Security.Principal.Windows" Version="4.7.0" />
