--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,4 +6,19 @@
     <PathMap>$(RepoRoot)=.</PathMap>
     <NoWarn>3305</NoWarn>
   </PropertyGroup>
+  <PropertyGroup>
+    <Authors>juner</Authors>
+    <Company>juners project</Company>
+    <PackageProjectUrl>https://github.com/juner/WUApiLib.Extensions</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/juner/WUApiLib.Extensions.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <Copyright>Copyright © 2019 juner</Copyright>
+  </PropertyGroup>
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 </Project>
