--- a/WUApiLib.Extensions/WUApiLib.Extensions.csproj
+++ b/WUApiLib.Extensions/WUApiLib.Extensions.csproj
@@ -3,10 +3,11 @@
     <ProjectGuid>{ACFF0048-C65C-49E8-8799-129AD80BBEF2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
-  <PropertyGroup>
+    <PackageId>WUApiLib.Extensions</PackageId>
     <Version>1.0.0.0</Version>
-    <Authors>juner</Authors>
+    <PackageTags>WUApiLib</PackageTags>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
   <ItemGroup>
     <COMReference Include="WUApiLib" />
