--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -12,11 +12,11 @@
     <PackageProjectUrl>https://github.com/juner/WUApiLib.Extensions</PackageProjectUrl>
     <RepositoryUrl>https://github.com/juner/WUApiLib.Extensions.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <Copyright>Copyright © 2019 juner</Copyright>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="..\LICENSE">
+    <None Include="..\LICENSE.md">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
